--- a/PianoDiProgetto/sections/economico.tex
+++ b/PianoDiProgetto/sections/economico.tex
@@ -1,5 +1,42 @@
 \subsection{Considerazioni generali}
+Per quanto riguarda l\textquoteright{}aspetto economico-finanziario si deve sviluppare un\textquoteright{}approssimazione del costo delle risorse necessarie per completare tutte le varie attivit\`{a} di progetto.
+A tale scopo vengono usati i work package identificati precedentemente, ai quali vengono associati i costi preventivati. Cos\`{i} facendo si possono sommare tali costi per ricavare i costi diretti e, sottraendovi i possibili ricavi, \`{e} possibile definire il primo margine di contribuzione.
 
 \subsection{Costi}
+Nella tabella qui riportata si vuole presentare una stima dei costi orari suddivisi per ruolo; i costi sono comprensivi delle ritenute a carico dell\textquoteright{}impresa.
 
+\begin{longtable}{|>{\centering}p{6cm}| >{\centering}m{3cm}| >{\centering}m{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
+    \multicolumn{1}{c|}{\textbf{Tipologia}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario (euro)}}\\ %\tabularnewline 
+      \hline
+		Project Manager & Interna & 35 \tabularnewline 
+		Commercialista & Esterna & 30 \tabularnewline 
+		Grafico Pubblicitario & Esterna & 30 \tabularnewline 	 
+		Responsabile Customer Care & Interna & 28 \tabularnewline 
+		Responsabile Finanziario & Esterna & 28 \tabularnewline 
+		Responsabile Legale & Esterna & 28 \tabularnewline 
+		Responsabile Marketing & Esterna & 28 \tabularnewline 
+		Responsabile Qualit\`{a} & Interna & 28 \tabularnewline 
+		Responsabile Ricerca & Interna & 28 \tabularnewline 
+		Responsabile Sviluppo & Interna & 28 \tabularnewline 
+		Responsabile Tecnico & Interna & 28 \tabularnewline 
+		Analista & Interna & 25 \tabularnewline 
+		Analista Competitor & Interna & 25 \tabularnewline 
+		Progettista & Interna & 25 \tabularnewline 
+		Ricercatore di Innovazioni & Interna & 20 \tabularnewline 
+		Ricercatore di Mercato & Interna & 20 \tabularnewline 
+		Sviluppatore Back-end & Interna & 20 \tabularnewline 
+		Sviluppatore Front-end & Interna & 20 \tabularnewline 
+		Grafico & Interna & 18 \tabularnewline 
+		Verificatore Software & Interna & 18 \tabularnewline 
+		Verificatore Usabilit\`{a} & Interna & 18 \tabularnewline 
+        \hline
+    \caption{Tabella costi orari}
+    \label{tab: Tabella costi orari risorse}
+\end{longtable}
+ 
 \subsection{Conclusioni}
+
+
