--- a/PianoDiProgetto/sections/economico.tex
+++ b/PianoDiProgetto/sections/economico.tex
@@ -5,6 +5,7 @@ A tale scopo vengono usati i work package identificati precedentemente, ai quali
 \subsection{Costi}
 Nella tabella qui riportata si vuole presentare una stima dei costi orari suddivisi per ruolo; i costi sono comprensivi delle ritenute a carico dell\textquoteright{}impresa.
 
+\subsubsection{Costi orari delle risorse coinvolte}
 \begin{longtable}{|>{\centering}p{6cm}| >{\centering}m{3cm}| >{\centering}m{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
@@ -36,7 +37,371 @@ Nella tabella qui riportata si vuole presentare una stima dei costi orari suddiv
     \caption{Tabella costi orari}
     \label{tab: Tabella costi orari risorse}
 \end{longtable}
+
+\newpage
  
-\subsection{Conclusioni}
+\subsection{Costi attivit\`{a}}
+Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
+
+\paragraph{Definizione Concept (1.1)}
+
+\subparagraph{Specifiche di massima (1.1.1)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Definizione delle funzionalit\`{a} d\textquoteright{}uso (1.1.2)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Analisi delle tecnologie (1.1.3)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\paragraph{Studio Fattibilit\`{a} (1.2)}
+
+\subparagraph{Fattibilit\`{a} tecnica (1.2.1)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Fattibilit\`{a} marketing (1.2.2)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Fattibilit\`{a} legale (1.2.3)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Fattibilit\`{a} Economica (1.2.4)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\paragraph{Pianificazione (1.3)}
+
+\subparagraph{Pianificazione qualit\`{a} del prodotto (1.3.1)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Analisi dei rischi (1.3.2)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\paragraph{Analisi e Progettazione (1.4)}
+
+\subparagraph{Definizione dei casi d\textquoteright{}uso (1.4.1)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Definizione dei requisiti (1.4.2)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Progettazione di alto livello (1.4.3)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Progettazione di dettaglio (1.4.4)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Realizzazione documentazione database (1.4.5)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\paragraph{Sviluppo (1.5)}
+
+\subparagraph{Realizzazione database (1.5.1)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Realizzazione componenti (1.5.2)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\paragraph{Test (1.6)}
+
+\subparagraph{Test di unit\`{a} (1.6.1)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Test di integrazione (1.6.2)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Test di sistema (1.6.3)}  
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Collaudo finale (1.6.4)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\paragraph{Pubblicazione (1.7)}
+
+\subparagraph{Manuali Utente (1.7.1)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Assistenza e manutenzione (1.7.2)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\paragraph{Commercializzazione (1.8)}
+
+\subparagraph{Promozione del prodotto (1.8.1)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Presentazione del prodotto (1.8.2)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+
+
+
+
+
+
+
+
 
 
