revisione sezione obs

--- a/PianoDiProgetto/sections/obs.tex
+++ b/PianoDiProgetto/sections/obs.tex
@@ -30,7 +30,7 @@ Si attiene strettamente alle normative in materia di qualit\`{a} (ISO 9000/9001/
 e ISO 9126 relativamente alla qualit\`{a} del software) e, a seguito dell\textquoteright{} analisi dei singoli
 processi, promuove azioni di miglioramento, sia attraverso comunicazioni interne all\textquoteright{}azienda,
 che attraverso formazione specifica degli addetti. Il miglioramento continuo
-della qualit\`{a} aziendale, seguendo le linee guida del CMMI, garantisce all\textquoteright{}azienda un
+della qualit\`{a} aziendale, seguendo le linee guida del CMMI\footnote{Capability Maturity Model Integration - \url{http://it.wikipedia.org/wiki/Capability\_Maturity\_Model}}, garantisce all\textquoteright{}azienda un
 miglioramento dell\textquoteright{}efficienza ed una maggiore soddisfazione dei clienti. Per quanto riguarda
 il prodotto software sviluppato, il RQ deve inoltre comunicare al PM i verbali
 ottenuti dai suoi sottoposti e proporre attivit\`{a} mirate all\textquoteright{}incremento della qualit\`{a}.
@@ -52,9 +52,9 @@ redatto dall\textquoteright{}analista e sia effettivamente quanto richiesto. Al 
 \subsubsection{Responsabile tecnico}
 Il RT coordina ogni fase dello sviluppo dei prodotti software dell\textquoteright{}azienda ed \`{e} il responsabile
 dello stato di avanzamento dei prodotti nel rispetto delle scadenze temporali e
-dei costi. Ha una competenza tecnica molto vasta assimilata e deve potersi
-relazionare con i suoi subordinati su ogni aspetto dello sviluppo. Una volta ricevuto
-l\textquoteright{}incarico dal PM:
+dei costi. Ha una competenza tecnica molto vasta e deve potersi
+relazionare con i suoi subordinati su ogni aspetto dello sviluppo.\\
+Una volta ricevuto l\textquoteright{}incarico dal PM:
 \begin{enumerate}
 \item assegna all\textquoteright{}analista il compito di formalizzare quanto dev\textquoteright{}essere prodotto;
 \item al termine della fase di analisi, incarica:
@@ -72,14 +72,14 @@ di aggiornamento o di formazione per gli sviluppatori;
 
 \subsubsection{Analista}
 L\textquoteright{}analista ha il compito di formalizzare quanto emerso dalle discussioni con il PM e
-dalla lettura della documentazione di presentazione del progetto. Redige lo "Studio di Fattibilit\`{a}", nel quale si indica se il progetto \`{e} fattibile e quali sono le aree critiche ed il documento di Analisi dei Requisiti nel quale, con l\textquoteright{}ausilio di diagrammi dei casi d\textquoteright{}uso e di altri formalismi(vedi INCOSE), viene riportato cosa sar\`{a} sviluppato. Al termine della fase di analisi l\textquoteright{}analista consegner\`{a} entrambi i documenti al RT.
+dalla lettura della documentazione di presentazione del progetto. Redige lo "Studio di Fattibilit\`{a}", nel quale si indica se il progetto \`{e} fattibile e quali sono le aree critiche ed il documento di Analisi dei Requisiti nel quale, con l\textquoteright{}ausilio di diagrammi dei casi d\textquoteright{}uso e di altri formalismi(vedi INCOSE\footnote{International Council on Systems Engineering - \url{http://www.incose.org/}}), viene riportato cosa sar\`{a} sviluppato. Al termine della fase di analisi l\textquoteright{}analista consegner\`{a} entrambi i documenti al RT.
 
 \subsubsection{Progettista}
 La fase di progettazione ha inizio con la delibera, da parte del PM, di quanto prodotto
 dall\textquoteright{}analista e con la conseguente assegnazione dell\textquoteright{}incarico al Progettista. Una volta
 studiata l\textquoteright{}Analisi dei Requisiti, il progettista redige dapprima il documento di "Specifica
 Tecnica", nel quale viene proposta una soluzione ad alto livello del problema focalizzandosi
-maggiormente sulle funzionalit\`{a}, che sulla loro implementazione e successivamente
+maggiormente sulle funzionalit\`{a}, piuttosto che sulla loro implementazione, e successivamente
 il documento di "Definizione di Prodotto" nel quale si propone una soluzione concreta e
 dettagliata al problema posto. In entrambi i documenti il progettista far\`{a} ampio uso di
 diagrammi e schemi per rendere il pi\`{u} chiara possibile qualsiasi scelta implementativa.
