rinominato attività 1.7 in post-vendita

--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -32,7 +32,7 @@ Il codice prodotto dovrà essere costantemente verificato, per avere la sicurezz
 Arrivati a questo punto vengono dunque effettuati i test delle componenti prodotte, verificando come si relazionano tra di loro, a partire dalle componenti di base del prodotto per arrivare a testare, alla fine, il sistema completo.\\
 Inoltre viene verificato che quanto è stato prodotto sia conforme agli obiettivi e ai requisiti che si erano definiti in precedenza.
 
-\paragraph{Pubblicazione (1.7)}
+\paragraph{Post vendita (1.7)}
 Una volta che il software prodotto è terminato e rispetta gli obiettivi ed i requisiti, viene avviato il piano per il rilascio.\\
 In questa fase è prevista la realizzazione di documentazione a supporto dell'utente finale ed eventuali attività di manutenzione o comunque di supporto all'utente finale.\\
 
@@ -232,6 +232,23 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
+\paragraph{Pianificazione del lavoro (1.3.3)}
+\begin{description}
+\item[Descrizione:] fase in cui viene definita la programmazione delle attività necessarie allo svolgimento del progetto.
+\item[Responsabile:] 
+\item[Input:] esperienze personali, specifiche di massima, analisi di fattibilità.
+\item[Output:] WBS,OBS,RBS, diagramma di Gantt.
+\item[Attività:]
+\begin{itemize}
+\item decisione del livello di profondità del WBS;
+\item definizione delle attività;
+\item identificazione dei ruoli necessari per lo svolgimento del progetto;
+\item assegnazione dei ruoli alle attività;
+\end{itemize}
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{description}
+
 \paragraph{Definizione dei casi d'uso (1.4.1)}
 \begin{description}
 \item[Descrizione:]fase di definizione finale delle funzionalità del prodotto. Si determina in modo non ambiguo quali saranno le caratteristiche del software e come gli utenti potranno interagire con esso. Successivamente si effettua un'analisi dei rischi sul piano dello sviluppo del software, si studia e si definiscono quali sono i rischi nei quali si può incombere durante tutte la fasi di sviluppo, così da poterli evitare o quantomeno gestire.
@@ -311,7 +328,7 @@ alto livello del software.
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-\paragraph{Realizzazione documentazione database (1.4.5)}
+\paragraph{Documentazione database (1.4.5)}
 \begin{description}
 \item[Descrizione:] stesura formale della documentazione relativa all'architettura riguardante il database.
 \item[Responsabile:] 
