--- a/PianoDiProgetto/sections/economico.tex
+++ b/PianoDiProgetto/sections/economico.tex
@@ -49,7 +49,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -63,7 +63,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -77,7 +77,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -93,7 +93,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -107,7 +107,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -121,7 +121,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -135,7 +135,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -151,7 +151,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -165,7 +165,21 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
+    \multicolumn{1}{c|}{\textbf{Costo orario}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
+      \hline
+		Project Manager & 35 & 3 & 105 \tabularnewline	
+	  \hline
+\end{longtable}
+\end{center}
+
+\subparagraph{Pianificazione del lavoro (1.3.3)}
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -181,7 +195,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -195,7 +209,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -209,7 +223,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -223,7 +237,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -233,11 +247,11 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \end{longtable}
 \end{center}
 
-\subparagraph{Realizzazione documentazione database (1.4.5)}
+\subparagraph{Documentazione database (1.4.5)}
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -253,7 +267,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -267,7 +281,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -283,7 +297,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -297,7 +311,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -311,7 +325,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -325,7 +339,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -335,13 +349,13 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \end{longtable}
 \end{center}
 
-\paragraph{Pubblicazione (1.7)}
+\paragraph{Post vendita (1.7)}
 
 \subparagraph{Manuali Utente (1.7.1)}
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -355,7 +369,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -371,7 +385,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
@@ -385,7 +399,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Risorsa}} &
+    \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
