aggiunto costi nell'aspetto economico

--- a/PianoDiProgetto/sections/economico.tex
+++ b/PianoDiProgetto/sections/economico.tex
@@ -1,8 +1,8 @@
-\subsection{Considerazioni generali}
+\subsubsection{Considerazioni generali}
 Per quanto riguarda l\textquoteright{}aspetto economico-finanziario si deve sviluppare un\textquoteright{}approssimazione del costo delle risorse necessarie per completare tutte le varie attivit\`{a} di progetto.
 A tale scopo vengono usati i work package identificati precedentemente, ai quali vengono associati i costi preventivati. Cos\`{i} facendo si possono sommare tali costi per ricavare i costi diretti e, sottraendovi i possibili ricavi, \`{e} possibile definire il primo margine di contribuzione.
 
-\subsection{Costi}
+\subsubsection{Costi}
 Nella tabella qui riportata si vuole presentare una stima dei costi orari suddivisi per ruolo; i costi sono comprensivi delle ritenute a carico dell\textquoteright{}impresa.
 
 \subsubsection{Costi orari delle risorse coinvolte}
@@ -40,49 +40,56 @@ Nella tabella qui riportata si vuole presentare una stima dei costi orari suddiv
 
 \newpage
  
-\subsection{Costi attivit\`{a}}
+\subsubsection{Costi attivit\`{a}}
 Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 
 \paragraph{Definizione Concept (1.1)}
 
 \subparagraph{Specifiche di massima (1.1.1)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
-	  \hline
+		Project Manager & 35 & 2 & 70 \tabularnewline	
+		Analista & 25 & 5 & 125 \tabularnewline
+		Analista Competitor	& 25 & 3 & 75 \tabularnewline
+		\hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Definizione delle funzionalit\`{a} d\textquoteright{}uso (1.1.2)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 2 & 70 \tabularnewline	
+		Analista & 25 & 5 & 125 \tabularnewline
+		Analista Competitor & 25 & 6 & 150 \tabularnewline
+		Ricercatore di Innovazioni & 20 & 2 & 40 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Analisi delle tecnologie (1.1.3)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 1 & 35 \tabularnewline	
+		Analista & 28 & 3 & 84 \tabularnewline
+		Analista Competitor & 20 & 8 & 160 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
@@ -91,56 +98,63 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 
 \subparagraph{Fattibilit\`{a} tecnica (1.2.1)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 1 & 35 \tabularnewline
+		Analista & 25 & 5 & 125 \tabularnewline		
+		Progettista & 25 & 7 & 175 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Fattibilit\`{a} marketing (1.2.2)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 1 & 35 \tabularnewline	
+		Responsabile Marketing & 28 & 3 & 84 \tabularnewline
+		Ricercatore di Mercato & 20 & 10 & 200 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Fattibilit\`{a} legale (1.2.3)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 1 & 35 \tabularnewline	
+		Responsabile Legale & 28 & 10 & 280 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Fattibilit\`{a} Economica (1.2.4)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 1 & 35 \tabularnewline
+		Responsabile Finanziario & 28 & 5 & 140 \tabularnewline
+		Commercialista & 30 & 3 & 90 \tabularnewline		
 	  \hline
 \end{longtable}
 \end{center}
@@ -149,7 +163,7 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 
 \subparagraph{Pianificazione qualit\`{a} del prodotto (1.3.1)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
@@ -157,34 +171,36 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
 		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Responsabile Qualit\`{a} & 28 & 5 & 140 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Analisi dei rischi (1.3.2)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 3 & 105 \tabularnewline
+		Analista & 25 & 6 & 150 \tabularnewline		
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Pianificazione del lavoro (1.3.3)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 15 & 525 \tabularnewline	
 	  \hline
 \end{longtable}
 \end{center}
@@ -193,70 +209,81 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 
 \subparagraph{Definizione dei casi d\textquoteright{}uso (1.4.1)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 2 & 70 \tabularnewline
+		Analista & 25 & 15 & 375 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Definizione dei requisiti (1.4.2)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 28 & 2 & 56 \tabularnewline
+		Responsabile Tecnico & 28 & 5 & 140 \tabularnewline
+		Analista & 25 & 25 & 625 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Progettazione di alto livello (1.4.3)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 3 & 105 \tabularnewline
+		Responsabile Tecnico & 28 & 8 & 224 \tabularnewline
+		Analista & 25 & 3 & 75 \tabularnewline
+		Progettista & 25 & 20 & 500 \tabularnewline
+		Grafico & 18 & 4 & 72 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Progettazione di dettaglio (1.4.4)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 3 & 105 \tabularnewline
+		Progettista & 25 & 30 & 750 \tabularnewline
+		Sviluppatore Front-End & 20 & 5 & 100 \tabularnewline
+		Grafico & 18 & 25 & 450 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Documentazione database (1.4.5)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 3 & 105 \tabularnewline
+		Progettista & 25 & 10 & 250 \tabularnewline		
 	  \hline
 \end{longtable}
 \end{center}
@@ -265,28 +292,36 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 
 \subparagraph{Realizzazione database (1.5.1)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 1 & 35 \tabularnewline
+		Responsabile Sviluppo & 28 & 5 & 140 \tabularnewline
+		Sviluppatore Back-End & 20 & 20 & 400 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Realizzazione componenti (1.5.2)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 2 & 70 \tabularnewline
+		Responsabile Sviluppo & 28 & 25 & 700 \tabularnewline	
+		Analista & 25 & 3 & 75 \tabularnewline
+		Progettista & 25 & 6 & 150 \tabularnewline
+		Grafico & 18 & 20 & 360 \tabularnewline		
+		Sviluppatore Back-End & 20 & 150 & 3000 \tabularnewline
+		Sviluppatore Front-End & 20 & 120 & 2400 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
@@ -295,56 +330,59 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 
 \subparagraph{Test di unit\`{a} (1.6.1)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Verificatore Software & 18 & 55 & 990 \tabularnewline	
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Test di integrazione (1.6.2)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Verificatore Software & 18 & 60 & 1080 \tabularnewline	
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Test di sistema (1.6.3)}  
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 5 & 175 \tabularnewline	
+		Verificatore Usabilit\`{a} & 18 & 10 & 180 \tabularnewline
+		Verificatore Software & 18 & 15 & 270 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Collaudo finale (1.6.4)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 5 & 175 \tabularnewline
+		Responsabile Costumer Care & 28 & 5 & 140 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
@@ -353,28 +391,33 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 
 \subparagraph{Manuali Utente (1.7.1)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 3 & 105 \tabularnewline
+		Responsabile Tecnico & 28 & 15 & 420 \tabularnewline	
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Assistenza e manutenzione (1.7.2)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 6 & 210 \tabularnewline
+		Progettista & 25 & 30 & 750 \tabularnewline
+		Analista & 25 & 10 & 250 \tabularnewline
+		Sviluppatore Front-End & 20 & 50 & 1000 \tabularnewline
+		Sviluppatore Back-End & 20 & 70 & 1400 \tabularnewline
 	  \hline
 \end{longtable}
 \end{center}
@@ -383,39 +426,30 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 
 \subparagraph{Promozione del prodotto (1.8.1)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Responsabile Costumer Care & 28 & 10 & 280 \tabularnewline
+		Grafico Pubblicitario & 30 & 15 & 450 \tabularnewline		
 	  \hline
 \end{longtable}
 \end{center}
 
 \subparagraph{Presentazione del prodotto (1.8.2)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| >{\centering}p{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
     \multicolumn{1}{c|}{\textbf{Costo orario}} &
     \multicolumn{1}{c|}{\textbf{Ore previste}} &
 	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\ %\tabularnewline 
       \hline
-		Project Manager & 35 & 3 & 105 \tabularnewline	
+		Project Manager & 35 & 8 & 280 \tabularnewline
+		Responsabile Costumer Care & 28 & 12 & 336 \tabularnewline		
 	  \hline
 \end{longtable}
 \end{center}
-
-
-
-
-
-
-
-
-
-
-
